Added checkbox for otp plugin in config dialog. Some problems with signal finishedOtpShow: ui hang
Signed-off-by: Ettore Dreucci <ettore.dreucci@gmail.com>

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -367,7 +367,7 @@ p, li { white-space: pre-wrap; }
     <string>OTP</string>
    </property>
    <property name="toolTip">
-    <string>Generate OTP</string>
+    <string>Generate OTP and copy to clipboard</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+G</string>
