Prototype for QR encoding fields

--- a/resources.qrc
+++ b/resources.qrc
@@ -33,6 +33,7 @@
         <file alias="applications-system.svg">icons/applications-system.svg</file>
         <file alias="edit-copy.svg">icons/edit-copy.svg</file>
         <file alias="edit-clear.svg">icons/edit-clear.svg</file>
+        <file alias="qrcode.svg">icons/qrcode.svg</file>
         <file alias="folder-new.svg">icons/folder-new.svg</file>
     </qresource>
 </RCC>
