--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -284,7 +284,7 @@ p, li { white-space: pre-wrap; }
     <bool>false</bool>
    </property>
    <property name="toolButtonStyle">
-    <enum>Qt::ToolButtonFollowStyle</enum>
+    <enum>Qt::ToolButtonIconOnly</enum>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
