Added Norwegian Bokmål by request

--- a/resources.qrc
+++ b/resources.qrc
@@ -24,6 +24,7 @@
         <file>localization/localization_pt_PT.qm</file>
         <file>localization/localization_it_IT.qm</file>
         <file>localization/localization_sq_AL.qm</file>
+        <file>localization/localization_nb_NO.qm</file>
     </qresource>
     <qresource prefix="/icons">
         <file alias="document-new.svg">icons/document-new.svg</file>
