--- a/src/usersdialog.ui
+++ b/src/usersdialog.ui
@@ -39,7 +39,7 @@
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Select which users should be able to decrypt passwords stored in this folder.
-Note: Existing files will not be modified and retain the old permissions until you edit them.
+Note: Existing files will not be modified, and retain the old permissions until you edit them.
 Blue entries have a secret key available, select one of these to be able to decrypt.
 Red entries are not valid, you will not be able to encrypt to these.</string>
      </property>
@@ -62,7 +62,7 @@ Red entries are not valid, you will not be able to encrypt to these.</string>
         </size>
        </property>
        <property name="placeholderText">
-        <string>Search Users</string>
+        <string>Search for users</string>
        </property>
       </widget>
      </item>
