Also make line wrapping optional

--- a/src/configdialog.ui
+++ b/src/configdialog.ui
@@ -229,6 +229,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="checkBoxNoLineWrapping">
+             <property name="text">
+              <string>No line wrapping</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <spacer name="horizontalSpacer_9">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
