fix the unintended "running" of the entropy window in the keygen dialog and bypasses the "unknown elliptic curve" bug in unattended key generation in newer GnupPG versions.

--- a/src/keygendialog.ui
+++ b/src/keygendialog.ui
@@ -240,8 +240,8 @@
 #      first test version please comment
 #
 %echo Generating a default key
-Key-Type: default
-Subkey-Type: default
+Key-Type: RSA
+Subkey-Type: RSA
 Name-Real:
 Name-Comment: QtPass
 Name-Email:
