--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,7 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,900italic,300,700,900);
 :root {
   color-scheme: light dark;
 }
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,900italic,300,700,900);body{padding:50px;font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;color:#222;font-weight:300;}
+body{padding:50px;font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;color:#222;font-weight:300;}
 h1, h2, h3, h4, h5, h6{color:#222;margin:0 0 20px;}
 p, ul, ol, table, pre, dl{margin:0 0 20px;}
 h1, h2, h3{line-height:1.1;}
@@ -38,7 +39,7 @@ header{padding-right:320px;}
 .screenshots{height:600px;width:175%;}
 section{border:1px solid #e5e5e5;border-width:1px 0;padding:20px 0;margin:0 0 20px;}
 header a small{display:inline;}
-header ul{position:absolute;right:50px;top:52px;}
+header ul{position:absolute;right:50px;top:52px;}S
 header ul:nth-of-type(2){top:116px;}
 }
 @media print, screen and (max-width:840px){.screenshots{height:500px;width:175%;}
