--- a/src/keygendialog.ui
+++ b/src/keygendialog.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Generate GnuPG keypair</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resources.qrc">
+    <normaloff>:/artwork/icon.png</normaloff>:/artwork/icon.png</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="leftMargin">
     <number>6</number>
@@ -299,7 +303,9 @@ Expire-Date: 0
   <tabstop>checkBox</tabstop>
   <tabstop>plainTextEdit</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
