--- a/src/passworddialog.ui
+++ b/src/passworddialog.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Password</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resources.qrc">
+    <normaloff>:/artwork/icon.png</normaloff>:/artwork/icon.png</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0">
    <property name="leftMargin">
     <number>6</number>
@@ -191,7 +195,9 @@
   <tabstop>spinBox_pwdLength</tabstop>
   <tabstop>plainTextEdit</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
