--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -199,6 +199,9 @@
           <property name="scaledContents">
            <bool>false</bool>
           </property>
+          <property name="textInteractionFlags">
+           <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByMouse</set>
+          </property>
          </widget>
         </item>
         <item>
